--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ img:hover {
 
 /* Estilo de diseño arcade */
 body {
-    background-color: #000;
+    background-image: url('images/pacmaze.png');
 }
 
 .principal {
