--- a/style_intro.css
+++ b/style_intro.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Comic Sans MS';
 }
 body{
     overflow-x: hidden;
@@ -15,7 +16,7 @@ body{
     height: 100%;
     width: 100%;
     min-height: 100vh;
-    background: radial-gradient(#ecebe8, 20%, #c0bbb4);
+    background: radial-gradient(#ecebe8, 20%, #141413);
     position: relative;
 }
 .hero header .logo h2 a{
@@ -30,6 +31,23 @@ body{
   align-items: center;
   justify-content: space-between;
   padding: 40px 0 30px;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+}
+nav ul li a{
+    text-decoration: none;
+    color: white;
+    margin-left: 60px;
+    font-size: 15px;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: .4s;
+}
+nav ul li:not(:last-child) a:hover,
+nav ul li:not(:last-child) a:focus{
+    border-bottom: 2px solid white;
 }
 .content{
     padding-top: 140px;
