Cambios que no pueden hacer las putas

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,14 +1,12 @@
-#imagenDiv>img {
-    width: 350px;
-}
-
+@charset "UTF-8";
 body {
-    font-family: 'Press Start 2P', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #d3c5c5;
-    color: #fff;
+    min-height: 100vh;
     background: radial-gradient(#ecebe8, 20%, #141413);
+    font-family: 'Press Start 2P', sans-serif;
+    color: #fff;
+    display: grid;
+    place-items: center;
+    margin: 0;
 }
 
 header {
@@ -16,10 +14,15 @@ header {
     color: #fff;
     padding: 10px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
 }
 
 .titulo {
     font-size: 24px;
+    margin: 0;
 }
 
 .principal {
@@ -28,67 +31,89 @@ header {
     align-items: center;
     justify-content: center;
     margin-top: 20px;
-}
-
-.laederboard {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    border: 2px solid #fff;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 .cps,
-.tiempo {
+.tiempo,
+.clicks-per-second {
     margin-bottom: 20px;
+    text-align: center;
+    text-shadow: 2px 2px 5px #000;
+    font-weight: bold;
+    font-size: 24px;
+    color: #fff;
 }
 
 img {
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
+    width: 350px;
 }
 
 img:hover {
     transform: scale(1.1);
 }
 
-.p {
-    margin: 0;
-    font-size: 18px;
+main {
+    height: 100vh;
+    display: grid;
+    align-content: space-evenly;
+    justify-items: center;
+    align-items: center;
 }
 
-.clicks,
-.tiempo,
-.clicks-per-second {
-    font-weight: bold;
-    font-size: 24px;
-    color: #fff;
+main > button {
+    appearance: none;
+    box-sizing: content-box;
+    width: 12rem;
+    height: 8rem;
+    padding: 0;
+    background-image: linear-gradient(#eee, #eee), linear-gradient(#222, #222),
+        linear-gradient(-45deg, #f22, #f92, #ff2, #9f2, #2f2, #2f9, #2ff, #29f, #22f, #92f, #f2f, #f29, #f22, #f92, #ff2, #9f2, #2f2, #2f9, #2ff, #29f, #22f, #92f, #f2f, #f29, #f22);
+    background-origin: border-box;
+    background-clip: content-box, padding-box, border-box;
+    background-size: auto, auto, 12rem 12rem;
+    background-position: center, center, 0 0;
+    border: 0 solid transparent;
+    border-radius: 2rem;
+    font-size: 2em;
+    transition: margin 100ms, border-width 100ms, border-radius 100ms, padding 100ms;
 }
 
-.clicks-per-second {
-    margin-top: 10px;
+main > button:before {
+    content: "👆";
 }
 
-/* Estilo de diseño arcade */
-
-.principal {
-    border: 2px solid #fff;
-    padding: 20px;
-    border-radius: 10px;
+main > button:active:before {
+    content: "👇";
 }
 
-.clicks,
-.tiempo,
-.clicks-per-second {
+main > button:focus {
+    outline: none;
+    margin: calc(-.5rem - 2px);
+    padding: 2px;
+    border-width: 0.5rem;
+    border-radius: 2.5rem;
+    animation: hue-rotate calc(10000ms / var(--cps)) infinite linear;
+}
+
+@keyframes hue-rotate {
+    to {
+        background-position: center, center, 12rem 12rem;
+    }
+}
+
+body > div {
     text-align: center;
-    text-shadow: 2px 2px 5px #000;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 1rem;
 }
 
-a {
-    color: #fff;
-    text-decoration: none;
+body > div > a {
+    color: #fd2;
 }
-
-a:hover {
-    color: #f00;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
